[package]
name = "busytube"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["stream"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.1", features = ["v4"] }
