[package]
name = "busytube"
version = "0.1.5"
edition = "2021"
description = "A CLI tool for extracting video titles, durations, and thumbnails"
license = "MIT"
repository = "https://github.com/Renter-0/busytube"
keywords = ["youtube", "cli", "obsidian", "metadata"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "charset", "http2", "system-proxy", "stream"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
